--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@types/node": "^16.18.122",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.5",
+    "classnames": "^2.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-scripts": "5.0.1",
     "sass": "^1.83.0",
     "typescript": "^4.9.5",
