--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@types/node": "^16.18.122",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.5",
+    "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.1",
     "react-icons": "^5.4.0",
     "react-scripts": "5.0.1",
     "sass": "^1.83.0",
@@ -48,5 +50,6 @@
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^3.4.17"
-  }
+  },
+  "proxy": "https://cleanuri.com"
 }
